1. Метод .of [#405138]